
[project]
name = "mesa-tutorial"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mesa (>=3.2.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
